--- a/src/examples/Navbars/DashboardNavbar/form.css
+++ b/src/examples/Navbars/DashboardNavbar/form.css
@@ -4,8 +4,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(8px);
+  background-color: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(30px);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,51 +15,80 @@
 }
 
 .popup-content {
-  padding: 20px;
-  max-width: 400px;
+  max-width: 410px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1000;
-  background: rgba(255, 255, 255, 0.18);
-  box-shadow: 0 5px 20px 0 #bafff7;
   backdrop-filter: blur(20px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
+  background: #ffffff17;
+  box-shadow: 0 5px 50px 0 #bafff754;
+  padding: 30px;
 }
 
 .popup-content form {
   font-size: 14px;
-  padding: 10px 0px;
+  padding: 10px;
+}
+
+.popup-content form div {
+  margin-bottom: 13px !important;
+}
+
+.popup-content form input {
+  /* border-color: transparent;
+  backdrop-filter: blur(4px); */
+  width: 100%;
+  padding: 7px;
+  border-radius: 5px;
+  border: 1px solid #bafff7;
 }
 
 .popup-content .btn button {
+  font-weight: 500;
   padding: 8px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  border: 1px solid #bafff7;
+  background: rgba(255, 255, 255, 0.18);
   border-radius: 5px;
   cursor: pointer;
-  box-shadow: 2px 2px 2px 0 #bafff7;
+  color: white;
+  box-shadow: 2px 2px 2px 0 #bafff78a;
 }
 
 .popup-content .btn button:hover {
+  color: black;
   background-color: #bafff7;
+  box-shadow: 0px 2px 7px 0 #bafff788;
 }
 
 .popup-content form div {
   margin-bottom: 10px;
 }
 
+.registration-header {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.registration-header h5 {
+  margin: 0; 
+}
+
 .close-button {
   position: absolute;
-  top: 0px;
-  right: 10px;
+  top: 0;
+  right: 0;
   cursor: pointer;
   font-size: 24px;
   color: white;
-  transition: color 0.3s ease; /* Smooth transition */
+  transition: color 0.3s ease; 
 }
 
 .close-button:hover {
-  color: #000;
+  color: #bafff7;
 }
