--- a/src/examples/Navbars/DashboardNavbar/form.css
+++ b/src/examples/Navbars/DashboardNavbar/form.css
@@ -10,10 +10,10 @@
   justify-content: center;
   align-items: center;
   z-index: 999;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
 .popup-content {
+  font-weight: 500;
   color: #fff !important;
   max-width: 410px;
   position: absolute;
@@ -44,17 +44,6 @@
   background-clip: text; */
 }
 
-.registration-header p {
-  cursor: pointer;
-  font-weight: 600;
-  margin: 0;
-  transition: color 0.3s ease;
-}
-
-.registration-header p:hover {
-  color: #bafff7;
-}
-
 .popup-content form {
   font-size: 14px;
   padding: 20px;
@@ -65,15 +54,19 @@
 }
 
 .popup-content form input {
+  color: #fff;
   width: 100%;
   padding: 7px;
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.14);
   border: 0;
+  /* transition: border-color 0.3s ease; */
 }
 
-.popup-content form input::placeholder {
+.popup-content form input:focus {
+  border-color: #bafff7;
 }
+
 
 .popup-content .btn {
   margin-top: 25px;
@@ -81,22 +74,22 @@
 }
 
 .popup-content .btn button {
+  color: #fff;
   font-weight: 500;
   padding: 8px;
-  border: 1px solid #bafff7;
+  border: 0;
   background: rgba(255, 255, 255, 0.14);
   border-radius: 5px;
   cursor: pointer;
-  box-shadow: 2px 2px 2px 0 #bafff78a;
 }
 
 .popup-content .btn button:hover {
-  color: black;
-  background-color: #bafff7;
-  box-shadow: 0px 2px 7px 0 #bafff788;
+  background-color: #1effe59e;
+  /* box-shadow: 0px 2px 7px 0 #bafff788; */
 }
 
 .audio-button {
+  color: #fff;
   padding: 7px;
   background-color: rgba(255, 255, 255, 0.14);
   border: none;
@@ -108,7 +101,7 @@
 }
 
 .audio-button.clicked {
-  background-color: #47dc6c6c;
+  background-color: #1effe59e;
 }
 
 .registration-header span {
@@ -117,5 +110,5 @@
 }
 
 .registration-header span:hover {
-  color: #bafff7;
+  color: #1effe59e;
 }
