--- a/src/examples/Navbars/DashboardNavbar/form.css
+++ b/src/examples/Navbars/DashboardNavbar/form.css
@@ -60,13 +60,11 @@
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.14);
   border: 0;
-  /* transition: border-color 0.3s ease; */
 }
 
 .popup-content form input:focus {
-  border-color: #bafff7;
+  outline: none;
 }
-
 
 .popup-content .btn {
   margin-top: 25px;
