--- a/src/examples/Navbars/DashboardNavbar/form.css
+++ b/src/examples/Navbars/DashboardNavbar/form.css
@@ -58,7 +58,7 @@
   width: 100%;
   padding: 7px;
   border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.14);
+  background-color: rgba(255, 255, 255, 0.14) !important;
   border: 0;
 }
 
@@ -105,8 +105,5 @@
 .registration-header span {
   width: 20px;
   cursor: pointer;
-}
-
-.registration-header span:hover {
   color: #1effe59e;
 }
