--- a/src/examples/Navbars/DashboardNavbar/Registrationform.css
+++ b/src/examples/Navbars/DashboardNavbar/Registrationform.css
@@ -79,11 +79,7 @@
   background: rgba(255, 255, 255, 0.14);
   border-radius: 5px;
   cursor: pointer;
-}
-
-.popup-content .btn button:hover {
   background-color: #1effe59e;
-  /* box-shadow: 0px 2px 7px 0 #bafff788; */
 }
 
 .audio-button {
@@ -105,5 +101,8 @@
 .registration-header span {
   width: 20px;
   cursor: pointer;
+}
+
+.registration-header span:hover {
   color: #1effe59e;
 }
