--- a/src/layouts/profile/popup/feedback.css
+++ b/src/layouts/profile/popup/feedback.css
@@ -44,6 +44,7 @@
 }
 
 .feedback-heading span {
+  margin-bottom: 8px;
   width: 20px;
   cursor: pointer;
 }
@@ -64,7 +65,7 @@
 .feedback-content p {
   font-weight: 300;
   margin: 0;
-  font-size: 17px;
+  font-size: 15px;
 }
 
 .feedback-content .emoji-buttons button {
