--- a/src/layouts/profile/components/Header/PurchasePopup/purchase.css
+++ b/src/layouts/profile/components/Header/PurchasePopup/purchase.css
@@ -30,7 +30,7 @@
 }
 
 /* heading */
-.feedback-heading {
+.purchase-heading {
   position: relative;
   display: flex;
   justify-content: space-between;
@@ -39,56 +39,59 @@
   margin-bottom: 5px;
 }
 
-.feedback-heading h4 {
+.purchase-heading h4 {
   font-weight: 400;
 }
 
-.feedback-heading span {
+.purchase-heading span {
   margin-bottom: 8px;
   width: 20px;
   cursor: pointer;
 }
 
-.feedback-heading span:hover {
-  color: #0BB08C;
+.purchase-heading span:hover {
+  color: #1effe59e;
 }
 
 /* content */
-.feedback-content {
+.popup-form form {
   padding: 10px 0;
   border-style: solid;
-  border-image: linear-gradient(to right, rgba(49, 49, 49, 0), #1effe59e, rgba(49, 49, 49, 0))
-    1;
+  border-image: linear-gradient(to right, rgba(49, 49, 49, 0), #1effe59e, rgba(49, 49, 49, 0)) 1;
   border-width: 2px 0 0 0;
 }
 
-.feedback-content p {
-  font-weight: 300;
-  margin: 0;
+.popup-form form label {
   font-size: 15px;
+  font-weight: 300;
 }
 
-.feedback-content .emoji-buttons button {
-  cursor: pointer;
-  background: transparent;
+.popup-form form input {
+  color: #fff;
+  width: 100%;
+  padding: 7px;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.14) !important;
   border: 0;
-  margin: 0px 5px;
-  font-size: 20px;
-  padding: 5px;
-  transition: transform 0.2s;
 }
 
-.feedback-content .emoji-buttons button:hover {
-  transform: scale(1.2);
+.popup-form form input:focus {
+  outline: none;
 }
 
-.feedback-content .emoji-buttons button.selected {
-  transform: scale(1.6);
+.popup-form form input:-webkit-autofill,
+.popup-form form input:-webkit-autofill:hover,
+.popup-form form input:-webkit-autofill:focus,
+.popup-form form input:-webkit-autofill:active {
+  -webkit-text-fill-color: rgba(255, 255, 255, 0.6);
+  background-color: rgb(0 0 0 / 24%) !important;
+  transition: background-color 5000s ease-in-out 0s;
 }
 
 /* button */
 .popup-form .btn {
   text-align: end;
+  margin-top: 15px;
 }
 
 .popup-form .btn button {
@@ -99,5 +102,5 @@
   background: rgba(255, 255, 255, 0.14);
   border-radius: 5px;
   cursor: pointer;
-  background-color: #0BB08C;
+  background-color: #1effe59e;
 }
