--- a/src/layouts/tables/adduser/adduser.css
+++ b/src/layouts/tables/adduser/adduser.css
@@ -1,107 +1,114 @@
 .popup-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    backdrop-filter: blur(30px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 999;
-  }
-  
-  .popup-form {
-    color: #fff !important;
-    max-width: 400px;
-    width: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1000;
-    backdrop-filter: blur(20px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    background: #2a40303d;
-    box-shadow: 0 5px 50px 0 #bafff754;
-    padding: 15px;
-  }
-  
-  /* heading */
-  .purchase-heading {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 5px;
-  }
-  
-  .purchase-heading h4 {
-    font-weight: 400;
-  }
-  
-  .purchase-heading span {
-    margin-bottom: 8px;
-    width: 20px;
-    cursor: pointer;
-  }
-  
-  .purchase-heading span:hover {
-    color: #1effe59e;
-  }
-  
-  /* content */
-  .popup-form form {
-    padding: 10px 0;
-    border-style: solid;
-    border-image: linear-gradient(to right, rgba(49, 49, 49, 0), #1effe59e, rgba(49, 49, 49, 0)) 1;
-    border-width: 2px 0 0 0;
-  }
-  
-  .popup-form form label {
-    font-size: 15px;
-    font-weight: 300;
-  }
-  
-  .popup-form form input {
-    color: #fff;
-    width: 100%;
-    padding: 7px;
-    border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.14) !important;
-    border: 0;
-  }
-  
-  .popup-form form input:focus {
-    outline: none;
-  }
-  
-  .popup-form form input:-webkit-autofill,
-  .popup-form form input:-webkit-autofill:hover,
-  .popup-form form input:-webkit-autofill:focus,
-  .popup-form form input:-webkit-autofill:active {
-    -webkit-text-fill-color: rgba(255, 255, 255, 0.6);
-    background-color: rgb(0 0 0 / 24%) !important;
-    transition: background-color 5000s ease-in-out 0s;
-  }
-  
-  /* button */
-  .popup-form .btn {
-    text-align: end;
-    margin-top: 15px;
-  }
-  
-  .popup-form .btn button {
-    color: #fff;
-    font-weight: 500;
-    padding: 8px;
-    border: 0;
-    background: rgba(255, 255, 255, 0.14);
-    border-radius: 5px;
-    cursor: pointer;
-    background-color: #1effe59e;
-  }
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(30px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.popup-form {
+  color: #fff !important;
+  max-width: 400px;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  backdrop-filter: blur(20px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  background: #2a40303d;
+  box-shadow: 0 5px 50px 0 #bafff754;
+  padding: 15px;
+}
+
+/* heading */
+.purchase-heading {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.purchase-heading h4 {
+  font-weight: 400;
+}
+
+.purchase-heading span {
+  margin-bottom: 8px;
+  width: 20px;
+  cursor: pointer;
+}
+
+.purchase-heading span:hover {
+  color: #0bb08c;
+}
+
+/* content */
+.popup-form form {
+  padding: 15px 0;
+  border-style: solid;
+  border-image: linear-gradient(to right, rgba(49, 49, 49, 0), #1effe59e, rgba(49, 49, 49, 0)) 1;
+  border-width: 2px 0 0 0;
+}
+
+.popup-form form label {
+  font-size: 15px;
+  font-weight: 300;
+}
+
+.popup-form form input,
+.popup-form form select {
+  color: #fff;
+  width: 100%;
+  padding: 7px;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.14) !important;
+  border: 0;
+  /* margin-bottom: 15px; */
+}
+
+.popup-form form input:focus,
+.popup-form form select:focus {
+  outline: none;
+}
+
+.popup-form form input:-webkit-autofill,
+.popup-form form input:-webkit-autofill:hover,
+.popup-form form input:-webkit-autofill:focus,
+.popup-form form input:-webkit-autofill:active {
+  -webkit-text-fill-color: #fff !important;
+  background-color: rgb(0 0 0 / 24%) !important;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+.popup-form form select option {
+  background: rgba(7, 58, 7, 0.3);
+  /* background: rgba(19, 37, 19, 0.76); */
+}
+
+/* button */
+.popup-form .btn {
+  text-align: end;
+  margin-top: 10px;
+}
+
+.popup-form .btn button {
+  color: #fff;
+  font-weight: 500;
+  padding: 10px 20px;
+  border: 0;
+  background: rgba(255, 255, 255, 0.14);
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #0bb08c;
+}
