--- a/src/layouts/tables/adduser/adduser.css
+++ b/src/layouts/tables/adduser/adduser.css
@@ -26,7 +26,7 @@
   border: 1px solid rgba(255, 255, 255, 0.18);
   background: #2a40303d;
   box-shadow: 0 5px 50px 0 #bafff754;
-  padding: 15px;
+  padding: 20px;
 }
 
 /* heading */
@@ -61,24 +61,16 @@
   border-width: 2px 0 0 0;
 }
 
-.popup-form form label {
-  font-size: 15px;
-  font-weight: 300;
-}
-
-.popup-form form input,
-.popup-form form select {
+.popup-form form input {
   color: #fff;
   width: 100%;
   padding: 7px;
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.14) !important;
   border: 0;
-  /* margin-bottom: 15px; */
 }
 
-.popup-form form input:focus,
-.popup-form form select:focus {
+.popup-form form input:focus {
   outline: none;
 }
 
@@ -91,9 +83,25 @@
   transition: background-color 5000s ease-in-out 0s;
 }
 
-.popup-form form select option {
-  background: rgba(7, 58, 7, 0.3);
-  /* background: rgba(19, 37, 19, 0.76); */
+.popup-form form .select-btn {
+  overflow: hidden;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.popup-form form .select-btn .button {
+  color: #8d8d8dd2;
+  padding: 7px;
+  background-color: rgba(255, 255, 255, 0.14);
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  margin: 5px 5px;
+}
+
+.popup-form form .select-btn .button.clicked {
+  color: #fff;
+  background-color: #0bb08c;
 }
 
 /* button */
