--- a/src/layouts/tables/uploaduser/uploaduser.css
+++ b/src/layouts/tables/uploaduser/uploaduser.css
@@ -82,13 +82,9 @@
   background-color: #0bb08c;
 }
 /* table */
-/* table {
-  text-align: center;
+table {
   width: 100%;
-  padding: 10px 0;
-  overflow-y: auto;
-  height: 100px;
-} */
+}
 
 table thead {
   font-size: 18px;
