--- a/src/layouts/tables/adduser/adduser.css
+++ b/src/layouts/tables/adduser/adduser.css
@@ -89,7 +89,7 @@
   margin-bottom: 15px;
 }
 
-.add-form form .select-btn .button {
+.add-form form .select-btn .audio-button {
   color: #8d8d8dd2;
   padding: 7px;
   background-color: rgba(255, 255, 255, 0.14);
@@ -99,7 +99,7 @@
   margin: 5px 5px;
 }
 
-.add-form form .select-btn .button.clicked {
+.add-form form .select-btn .audio-button.clicked {
   color: #fff;
   background-color: #0bb08c;
 }
