--- a/src/layouts/tables/uploaduser/uploaduser.css
+++ b/src/layouts/tables/uploaduser/uploaduser.css
@@ -67,7 +67,7 @@
   margin-bottom: 15px;
 }
 
-.upload-form form .select-btn .button {
+.upload-form form .select-btn .audio-button {
   color: #8d8d8dd2;
   padding: 7px;
   background-color: rgba(255, 255, 255, 0.14);
@@ -77,7 +77,7 @@
   margin: 5px 5px;
 }
 
-.upload-form form .select-btn .button.clicked {
+.upload-form form .select-btn .audio-button.clicked {
   color: #fff;
   background-color: #0bb08c;
 }
@@ -96,6 +96,29 @@
 .upload-form form table tbody {
   font-size: 14px;
   font-weight: 300;
+}
+
+.table-container {
+  overflow-y: auto;
+  max-height: 150px;
+  margin: 20px 0;
+  padding: 0 10px;
+  background-color: rgba(255, 255, 255, 0.14);
+  border-radius: 10px;
+  text-align: center;
+}
+
+#table-style::-webkit-scrollbar {
+  width: 8px;
+  background-color: rgba(255, 255, 255, 0.14);
+}
+
+#table-style::-webkit-scrollbar-thumb {
+  background-color: #ffffff;
+}
+
+#table-style::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.14);
 }
 
 /* button */
@@ -123,7 +146,7 @@
   left: 240px;
   padding: 5px 15px;
   border-radius: 8px;
-  background: #0406054a;
+  background: #040605;
   width: 350px;
   border: 1px solid rgb(88 88 88 / 19%);
 }
