WIP-Allocating-Users

--- a/src/layouts/tables/adduser/adduser.css
+++ b/src/layouts/tables/adduser/adduser.css
@@ -86,7 +86,7 @@
 .add-form form .select-btn {
   overflow: hidden;
   text-align: start;
-  margin-bottom: 15px;
+  /* margin-bottom: 15px; */
 }
 
 .add-form form .select-btn .audio-button {
