--- a/src/examples/Navbars/DashboardNavbar/RegisterForm/Registrationform.css
+++ b/src/examples/Navbars/DashboardNavbar/RegisterForm/Registrationform.css
@@ -16,8 +16,8 @@
   color: #fff !important;
   max-width: 410px;
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 55%;
+  left: 55%;
   transform: translate(-50%, -50%);
   z-index: 1000;
   backdrop-filter: blur(20px);
@@ -33,8 +33,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 20px;
+  padding: 0px 10px;
   text-align: center;
+  margin-bottom: 10px;
 }
 
 .registration-header h4 {
@@ -46,7 +47,7 @@
 
 .popup-content form {
   font-size: 14px;
-  padding: 20px;
+  padding: 10px;
 }
 
 .popup-content form div {
@@ -78,6 +79,7 @@
 .popup-content .btn {
   margin-top: 25px;
   text-align: end;
+  margin-bottom: 0;
 }
 
 .popup-content .btn button {
