--- a/src/layouts/tables/adduser/adduser.css
+++ b/src/layouts/tables/adduser/adduser.css
@@ -14,11 +14,11 @@
 
 .add-form {
   color: #fff !important;
-  max-width: 400px;
+  max-width: 600px;
   width: 100%;
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 55%;
+  left: 55%;
   transform: translate(-50%, -50%);
   z-index: 1000;
   backdrop-filter: blur(20px);
@@ -89,7 +89,8 @@
   /* margin-bottom: 15px; */
 }
 
-.add-form form .select-btn .audio-button {
+.add-form form .select-btn .audio-button,
+.add-form form .select-btn .branch-button {
   color: #8d8d8dd2;
   padding: 7px;
   background-color: rgba(255, 255, 255, 0.14);
@@ -99,7 +100,8 @@
   margin: 5px 5px;
 }
 
-.add-form form .select-btn .audio-button.clicked {
+.add-form form .select-btn .audio-button.clicked,
+.add-form form .select-btn .branch-button.clicked {
   color: #fff;
   background-color: #0bb08c;
 }
