--- a/src/App.css
+++ b/src/App.css
@@ -23,30 +23,28 @@ form select,
 #bg-main-img {
   background: linear-gradient(to left, rgba(0, 0, 0, 0.582), rgb(2, 27, 33)),
     url("./assets/images/main-bg-img.png") no-repeat center center / cover;
-}
-/* #bg-main-img::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #021b217a;
-  z-index: 1;
-} */
-
-/* ::-webkit-input-placeholder {
-  font-family: var(--custom-font-family);
+  min-height: 650px;
 }
 
-:-ms-input-placeholder {
-  font-family: var(--custom-font-family);
+/* purchase page css */
+.purchase-add,
+.purchase-delete {
+  /* border: 1px solid #fff; */
+  background: transparent;
+  color: #fff;
+  font-size: 20px;
+  padding: 3px 12px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-::-ms-input-placeholder {
-  font-family: var(--custom-font-family);
-} */
+/* cart page css */
 
-/* ::placeholder {
-  font-family: var(--custom-font-family);
-} */
+.cart-container {
+  min-height: 600px;
+  padding: 10px;
+}
+
+.cart-container .cart-empty {
+  text-align: center;
+}
