--- a/src/App.css
+++ b/src/App.css
@@ -21,9 +21,8 @@ form select,
 }
 
 #bg-main-img {
-  background: linear-gradient(to left, rgba(0, 0, 0, 0.582), rgb(2, 27, 33)),
-    url("./assets/images/main-bg-img.png") no-repeat center center / cover;
-  min-height: 650px;
+  background: linear-gradient(to left, rgba(0, 0, 0, 0.582), rgb(2, 27, 33,0.582)), url("./assets/images/main-bg-img.png") no-repeat ;
+  min-height: 100vh;
 }
 
 /* purchase page css */
