fixed the background

--- a/src/App.css
+++ b/src/App.css
@@ -21,9 +21,13 @@ form select,
 }
 
 #bg-main-img {
-  background: linear-gradient(to left, rgba(0, 0, 0, 0.582), rgb(2, 27, 33,0.582)), url("./assets/images/main-bg-img.png") no-repeat ;
+  background: linear-gradient(to left, rgba(0, 0, 0, 0.582), rgba(2, 27, 33, 0.582)), 
+              url("./assets/images/main-bg-img.png") no-repeat;
+  background-attachment: fixed; 
+  background-size: cover; 
   min-height: 100vh;
 }
+
 
 /* purchase page css */
 .purchase-add,
