--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,6 @@ form select,
 /* purchase page css */
 .purchase-add,
 .purchase-delete {
-  /* border: 1px solid #fff; */
   background: transparent;
   color: #fff;
   font-size: 20px;
@@ -39,11 +38,11 @@ form select,
   cursor: pointer;
 }
 .purchase-add {
-  padding: 5px 12px;
+  padding: 0 6px;
   margin: 0 !important;
 }
 .purchase-delete {
-  padding: 5px 15px;
+  padding: 0 8px;
 }
 
 /* cart page css */
@@ -54,29 +53,52 @@ form select,
   text-align: center;
 }
 
-.cart-container .cart-empty {
-  text-align: center;
-}
-
 .add-to-cart {
   display: flex;
-  gap: 150px;
+  gap: 50px;
 }
 
-.card-details {
-  width: 100%;
-  height: 100%;
+.add-to-cart tbody {
+  font-size: 16px;
+}
+
+.add-to-cart th {
+  padding: 15px;
+  border-bottom: 1px solid #bafff7;
+  opacity: 0.7;
+  text-transform: uppercase;
+  color: #bafff7;
+  font-size: small;
+}
+
+.add-to-cart tr {
+  border-bottom: 1px solid #bafff7;
+}
+
+.add-to-cart td {
   padding: 10px;
-  color: #fff !important;
 }
 
-.card-details table {
-  width: 100%;
-}
-
+.card-details,
 .card-total {
   width: 100%;
   height: 100%;
-  padding: 10px;
   color: #fff !important;
+}
+
+.card-details table,
+.card-total table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.cart-purchase {
+  padding: 15px;
+}
+
+.cart-purchase button {
+  border-radius: 7px;
+  padding: 8px 15px;
+  color: #fff;
+  background: transparent;
 }
