--- a/src/layouts/tables/filterGroup/filterGroup.css
+++ b/src/layouts/tables/filterGroup/filterGroup.css
@@ -1,15 +1,18 @@
 .filter-container select {
   color: #fff;
   width: 100%;
-  padding: 7px 18px;
+  padding: 8px 18px;
   border-radius: 5px;
-  background-color: #0bb08c;
+  background-color: #021b215e;
+  box-shadow: 0rem 0.875rem 1.625rem -0.75rem rgba(186, 255, 247, 0.4),
+    0rem 0.25rem 1.4375rem 0rem rgba(186, 255, 247, 0.15),
+    0rem 0.5rem 0.625rem -0.3125rem rgba(186, 255, 247, 0.2);
   border: 0;
   cursor: pointer;
 }
 
 .filter-container select option {
-  background-color: #0e362e54;
+  background-color: #021b215e;
   text-transform: capitalize;
 }
 
