--- a/src/layouts/tables/uploaduser/uploaduser.css
+++ b/src/layouts/tables/uploaduser/uploaduser.css
@@ -79,7 +79,7 @@
 
 .upload-form form .select-btn .audio-button.clicked {
   color: #fff;
-  background-color: #0bb08c;
+  background-color: #021b215e;
 }
 /* table */
 .upload-form form table {
@@ -128,6 +128,7 @@
 }
 
 .upload-form .btn button {
+  text-transform: uppercase;
   color: #fff;
   font-weight: 500;
   padding: 10px 20px;
@@ -135,7 +136,10 @@
   background: rgba(255, 255, 255, 0.14);
   border-radius: 7px;
   cursor: pointer;
-  background-color: #0bb08c;
+  background-color: #021b215e;
+  box-shadow: 0rem 0.875rem 1.625rem -0.75rem rgba(186, 255, 247, 0.4),
+    0rem 0.25rem 1.4375rem 0rem rgba(186, 255, 247, 0.15),
+    0rem 0.5rem 0.625rem -0.3125rem rgba(186, 255, 247, 0.2);
 }
 
 /* instruction */
