--- a/src/examples/Navbars/DashboardNavbar/RegisterForm/Registrationform.css
+++ b/src/examples/Navbars/DashboardNavbar/RegisterForm/Registrationform.css
@@ -25,7 +25,7 @@
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
   background: #2a40303d;
-  box-shadow: 0 5px 50px 0 #bafff754;
+  /* box-shadow: 0 5px 50px 0 #bafff754; */
   padding: 15px;
 }
 
