--- a/src/layouts/tables/adduser/adduser.css
+++ b/src/layouts/tables/adduser/adduser.css
@@ -124,9 +124,9 @@
   border-radius: 7px;
   cursor: pointer;
   background-color: #021b215e;
-  box-shadow: 0rem 0.875rem 1.625rem -0.75rem rgba(186, 255, 247, 0.4),
+  /* box-shadow: 0rem 0.875rem 1.625rem -0.75rem rgba(186, 255, 247, 0.4),
     0rem 0.25rem 1.4375rem 0rem rgba(186, 255, 247, 0.15),
-    0rem 0.5rem 0.625rem -0.3125rem rgba(186, 255, 247, 0.2);
+    0rem 0.5rem 0.625rem -0.3125rem rgba(186, 255, 247, 0.2); */
 }
 
 /* skills badge */
