--- a/src/layouts/tables/adduser/adduser.css
+++ b/src/layouts/tables/adduser/adduser.css
@@ -23,9 +23,10 @@
   z-index: 1000;
   backdrop-filter: blur(20px);
   border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  border: 1px solid transparent;
+  border-style: solid;
+  border-image: linear-gradient(to bottom, rgb(255, 255, 255), rgba(49, 49, 49, 0)) 1;
   background: #2a40303d;
-  box-shadow: 0 5px 50px 0 #bafff754;
   padding: 20px;
 }
 
@@ -119,14 +120,13 @@
   color: #fff;
   font-weight: 500;
   padding: 10px 20px;
-  border: 0;
   background: rgba(255, 255, 255, 0.14);
   border-radius: 7px;
   cursor: pointer;
   background-color: #021b215e;
-  /* box-shadow: 0rem 0.875rem 1.625rem -0.75rem rgba(186, 255, 247, 0.4),
-    0rem 0.25rem 1.4375rem 0rem rgba(186, 255, 247, 0.15),
-    0rem 0.5rem 0.625rem -0.3125rem rgba(186, 255, 247, 0.2); */
+  border: 1px solid transparent;
+  border-style: solid;
+  border-image: linear-gradient(to right, rgb(255, 255, 255), rgba(49, 49, 49, 0)) 1;
 }
 
 /* skills badge */
@@ -137,7 +137,7 @@
 }
 
 .badge {
-  background-color: red;
+  background-color: #9ce325;
   border-radius: 10px;
   color: white;
   padding: 2px 6px;
