Fixed-Border-radius-WIP-UI-Color

--- a/src/layouts/cart/popup/feedback.css
+++ b/src/layouts/cart/popup/feedback.css
@@ -16,17 +16,34 @@
   color: #fff !important;
   max-width: 400px;
   width: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  /* position: absolute; */
+  top: 15%;
+  left: 18%;
   transform: translate(-50%, -50%);
   z-index: 1000;
   backdrop-filter: blur(20px);
   border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
   background: #2a40303d;
-  box-shadow: 0 5px 50px 0 #bafff754;
   padding: 15px;
+  border: 1px solid transparent;
+  position: relative;
+}
+
+.popup-form::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 10px;
+  padding: 2px;
+  background: linear-gradient(to bottom, rgb(255, 255, 255), rgba(49, 49, 49, 0));
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+  pointer-events: none;
+  z-index: -1;
 }
 
 /* heading */
@@ -83,20 +100,4 @@
 
 .feedback-content .emoji-buttons button.selected {
   transform: scale(1.6);
-}
-
-/* button */
-.popup-form .btn {
-  text-align: end;
-}
-
-.popup-form .btn button {
-  color: #fff;
-  font-weight: 500;
-  padding: 8px;
-  border: 0;
-  background: rgba(255, 255, 255, 0.14);
-  border-radius: 5px;
-  cursor: pointer;
-  background-color: #021b215e;
 }
