--- a/src/App.css
+++ b/src/App.css
@@ -33,23 +33,180 @@ form select,
   min-height: 100vh;
 }
 
-.purchase-add,
-.purchase-delete {
-  background: transparent;
+/* common css */
+
+/* border-right for buttons */
+.border-container {
+  position: relative;
+  display: inline-block;
+}
+
+.border-container .border {
   color: #fff;
-  font-size: 20px;
-  border-radius: 5px;
+  width: 100%;
+  padding: 8px 18px;
+  background-color: #021b215e;
   cursor: pointer;
   border: 1px solid transparent;
-  border-style: solid;
-  border-image: linear-gradient(to right, rgb(255, 255, 255), rgba(49, 49, 49, 0)) 1;
+  border-radius: 8px;
+  position: relative;
+  z-index: 1;
+  text-transform: uppercase;
 }
-.purchase-add {
-  padding: 0 6px;
-  margin: 0 !important;
+
+.border-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 8px;
+  padding: 2px;
+  background: linear-gradient(to right, rgb(255, 255, 255), rgba(49, 49, 49, 0));
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+  pointer-events: none;
+  z-index: 0;
 }
-.purchase-delete {
-  padding: 0 8px;
+
+/* border-right for containers */
+.border-container-box {
+  position: relative;
+  display: inline-block;
+}
+
+.border-container-box .border-box {
+  color: #fff;
+  width: 100%;
+  padding: 8px 18px;
+  background-color: #0000006e;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  position: relative;
+  z-index: 1;
+}
+
+.border-container-box::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 8px;
+  padding: 2px;
+  background: linear-gradient(to right, rgb(255, 255, 255), rgba(49, 49, 49, 0));
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+  pointer-events: none;
+  z-index: 0;
+}
+
+/* border-right-green for button */
+.border-container-green {
+  position: relative;
+  display: inline-block;
+}
+
+.border-container-green .border-green {
+  color: rgb(156, 227, 37);
+  width: 100%;
+  padding: 8px 18px;
+  background-color: #021b215e;
+  cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  position: relative;
+  z-index: 1;
+  text-transform: uppercase;
+}
+
+.border-container-green::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 8px;
+  padding: 2px;
+  background: linear-gradient(to right, rgb(156, 227, 37), rgba(49, 49, 49, 0));
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+  pointer-events: none;
+  z-index: 0;
+}
+
+/* border-bottom */
+.border-container-bottom {
+  position: relative;
+  display: inline-block;
+}
+
+.border-container-bottom .border-bottom {
+  color: #fff;
+  width: 100%;
+  padding: 8px 18px;
+  background-color: #0000006e;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  position: relative;
+  z-index: 1;
+}
+
+.border-container-bottom::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 8px;
+  padding: 2px;
+  background: linear-gradient(to bottom, rgb(255, 255, 255), rgba(49, 49, 49, 0));
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+  pointer-events: none;
+  z-index: 0;
+}
+
+/* border-top */
+.border-container-top {
+  position: relative;
+  display: inline-block;
+}
+
+.border-container-top .border-top {
+  color: #fff;
+  width: 100%;
+  padding: 8px 18px;
+  background-color: #0000006e;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  position: relative;
+  z-index: 1;
+}
+
+.border-container-top::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 8px;
+  padding: 2px;
+  background: linear-gradient(to top, rgb(255, 255, 255), rgba(49, 49, 49, 0));
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+  pointer-events: none;
+  z-index: 0;
 }
 
 /* cart page css */
@@ -72,9 +229,8 @@ form select,
 .add-to-cart th {
   padding: 15px;
   border-bottom: 1px solid #ffffffde;
-  opacity: 0.7;
   text-transform: uppercase;
-  color: #bafff7;
+  color: #ffffff;
   font-size: small;
 }
 
@@ -91,21 +247,11 @@ form select,
   width: 100%;
   height: 100%;
   color: #fff !important;
+  padding: 0 15px;
 }
 
 .card-details table,
 .card-total table {
   width: 100%;
   border-collapse: collapse;
-}
-
-.cart-purchase {
-  padding: 15px;
-}
-
-.cart-purchase button {
-  border-radius: 7px;
-  padding: 8px 15px;
-  color: #fff;
-  background: transparent;
 }
