--- a/src/examples/Configurator/doubtform.css
+++ b/src/examples/Configurator/doubtform.css
@@ -1,9 +1,11 @@
 .form-container form label {
   font-size: 15px;
+  margin-bottom: 5px;
 }
 
 .form-container form select {
   width: 100%;
+  margin-bottom: 15px;
 }
 .form-container form select,
 .form-container form textarea {
@@ -34,20 +36,6 @@
 }
 
 .form-container form .btn {
-  text-align: end;
+  left: 215px;
   margin-top: 10px;
-}
-
-.form-container form .btn button {
-  color: #fff;
-  font-weight: 500;
-  padding: 8px;
-  border: 0;
-  background: rgba(255, 255, 255, 0.14);
-  border-radius: 5px;
-  cursor: pointer;
-  background-color: #021b215e;
-  border: 1px solid transparent;
-  border-style: solid;
-  border-image: linear-gradient(to right, rgb(255, 255, 255), rgba(49, 49, 49, 0)) 1;
 }
