--- a/src/layouts/tables/customGroup/customGroup.css
+++ b/src/layouts/tables/customGroup/customGroup.css
@@ -1,5 +1,8 @@
 .group-container {
-  display: inline;
+  width: 100%;
+  border-radius: 8px;
+  background-color: #0000006e;
+  backdrop-filter: blur(7px);
 }
 
 .group-container .col1,
