--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,37 @@
 @font-face {
   font-family: "Magistral";
-  /* src: url('./fonts/MAGISTRAL-COMPRESS-700.TTF') format('truetype'); */
-  /* src: url("./fonts/MAGISTRAL-COMPRESS-NORMAL.TTF") format("truetype"); */
-  /* src: url("./fonts/MAGISTRAL-CONDENCE-700.TTF") format("truetype"); */
-  /* src: url('./fonts/MAGISTRAL-CONDENCED-NORMAL.TTF') format('truetype'); */
-  /* src: url("./fonts/MAGISTRAL-ITALICS-700.TTF") format("truetype"); */
-  /* src: url("./fonts/MAGISTRAL-NORMAL-700.TTF") format("truetype"); */
   src: url("./fonts//MAGISTRAL-NORMAL-FIN.TTF") format("truetype");
+}
+
+.loader {
+  display: inline-block;
+  font-size: 45px;
+}
+
+.loader span {
+  animation: flash-dot 2s infinite;
+  opacity: 0;
+  display: inline-block;
+}
+
+.loader span:nth-child(2) {
+  animation-delay: 0.5s;
+}
+
+.loader span:nth-child(3) {
+  animation-delay: 1s;
+}
+
+@keyframes flash-dot {
+  0%,
+  80%,
+  100% {
+    opacity: 0;
+  }
+  40%,
+  60% {
+    opacity: 1;
+  }
 }
 
 /* styles.css */
